--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
     "express": "^4.15.4",
+    "express-mailer": "^0.3.1",
     "express-session": "^1.15.5",
     "mongoose": "^4.11.8",
+    "nodemailer": "^4.1.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   }
