--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.15.4",
     "express-mailer": "^0.3.1",
     "express-session": "^1.15.5",
+    "mocha": "^3.5.3",
     "mongoose": "^4.11.8",
     "nodemailer": "^4.1.0",
     "passport": "^0.4.0",
