--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "url-loader": "^0.6.2"
   },
   "dependencies": {
+    "axios": "^0.17.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
@@ -49,6 +50,7 @@
     "passport-local": "^1.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-router": "^2.8.1",
     "react-router-dom": "^4.2.2",
     "webpack": "^3.8.1"
   }
