--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "babel-polyfill": "^6.26.0",
     "css-loader": "^0.28.7",
     "eslint": "^4.3.0",
     "eslint-config-google": "^0.9.1",
@@ -36,6 +37,7 @@
     "body-parser": "^1.17.2",
     "chai": "^4.1.1",
     "chai-http": "^3.0.0",
+    "co": "^4.6.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
@@ -50,7 +52,6 @@
     "passport-local": "^1.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-router": "^2.8.1",
     "react-router-dom": "^4.2.2",
     "webpack": "^3.8.1"
   }
