--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "co": "^4.6.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
+    "cron-scheduler": "^1.2.0",
     "ejs": "^2.5.7",
     "express": "^4.15.4",
     "express-mailer": "^0.3.1",
