--- a/package.json
+++ b/package.json
@@ -40,14 +40,16 @@
     "co": "^4.6.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
-    "cron-scheduler": "^1.2.0",
     "ejs": "^2.5.7",
     "express": "^4.15.4",
     "express-mailer": "^0.3.1",
     "express-session": "^1.15.5",
+    "i": "^0.3.6",
+    "jsonfile": "^4.0.0",
     "mocha": "^3.5.3",
     "mongoose": "^4.11.8",
     "mongoose-unique-validator": "^1.0.6",
+    "node-schedule": "^1.2.5",
     "nodemailer": "^4.1.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
